optimizaciones vista Home y fixes varios